@@ -1,3 +1,10 @@
+2020-04-21  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR c++/94149
+	* include/std/type_traits (__is_nt_constructible_impl): Add partial
+	specializations for bounded arrays with non-empty initializers.
+	* testsuite/20_util/is_nothrow_constructible/value_c++20.cc: New test.
+
 2020-04-20  Thomas Rodgers  <trodgers@redhat.com>
 
 	* testsuite/lib/libstdc++.exp: Add additional_flags=
